Login Page Creation

--- a/Assignment 4/Site.Master
+++ b/Assignment 4/Site.Master
@@ -47,8 +47,11 @@
                 <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/About">About</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Logon">Login</a></li>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contact</a></li>
+                          <li class="nav-item"><a class="nav-link" runat="server" href="~/StudentInfo/StudentInfo.aspx">Students</a></li>
+        <li class="nav-item"><a class="nav-link" runat="server" href="~/InstructorInfo/InstructorInfo.aspx">Instructors</a></li>
+
                     </ul>
                 </div>
             </div>
